FastLineSeries Test. Legend Test

--- a/DemoPrototype/DemoPrototype.csproj
+++ b/DemoPrototype/DemoPrototype.csproj
@@ -203,6 +203,7 @@
       <HintPath>Includes\DataHandler.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
