--- a/DemoPrototype/DemoPrototype.csproj
+++ b/DemoPrototype/DemoPrototype.csproj
@@ -134,6 +134,9 @@
     <Compile Include="SettingsPage.xaml.cs">
       <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="KeyboardDialog.xaml.cs">
+      <DependentUpon>KeyboardDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SetValueDialog.xaml.cs">
       <DependentUpon>SetValueDialog.xaml</DependentUpon>
     </Compile>
@@ -196,6 +199,10 @@
     <Page Include="SettingsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="KeyboardDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="SetValueDialog.xaml">
       <SubType>Designer</SubType>
