--- a/DemoPrototype/DemoPrototype.csproj
+++ b/DemoPrototype/DemoPrototype.csproj
@@ -229,33 +229,26 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Syncfusion.Data.UWP, Version=14.1460.0.41, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Syncfusion\Essential Studio\14.1.0.41\Assemblies for Universal Windows\10.0\Syncfusion.Data.UWP.dll</HintPath>
+    <Reference Include="Syncfusion.Data.UWP">
+      <HintPath>E:\Syncfusion\Syncfusion.Data.UWP.dll</HintPath>
     </Reference>
-    <Reference Include="Syncfusion.SfChart.UWP, Version=14.1460.0.41, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Syncfusion\Essential Studio\14.1.0.41\Assemblies for Universal Windows\10.0\Syncfusion.SfChart.UWP.dll</HintPath>
+    <Reference Include="Syncfusion.SfChart.UWP">
+      <HintPath>E:\Syncfusion\Syncfusion.SfChart.UWP.dll</HintPath>
     </Reference>
-    <Reference Include="Syncfusion.SfGrid.UWP, Version=14.1460.0.41, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Syncfusion\Essential Studio\14.1.0.41\Assemblies for Universal Windows\10.0\Syncfusion.SfGrid.UWP.dll</HintPath>
+    <Reference Include="Syncfusion.SfGrid.UWP">
+      <HintPath>E:\Syncfusion\Syncfusion.SfGrid.UWP.dll</HintPath>
     </Reference>
-    <Reference Include="Syncfusion.SfGridConverter.UWP, Version=14.1460.0.41, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Syncfusion\Essential Studio\14.1.0.41\Assemblies for Universal Windows\10.0\Syncfusion.SfGridConverter.UWP.dll</HintPath>
+    <Reference Include="Syncfusion.SfGridConverter.UWP">
+      <HintPath>E:\Syncfusion\Syncfusion.SfGridConverter.UWP.dll</HintPath>
     </Reference>
-    <Reference Include="Syncfusion.SfInput.UWP, Version=14.1460.0.41, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Syncfusion\Essential Studio\14.1.0.41\Assemblies for Universal Windows\10.0\Syncfusion.SfInput.UWP.dll</HintPath>
+    <Reference Include="Syncfusion.SfInput.UWP">
+      <HintPath>E:\Syncfusion\Syncfusion.SfInput.UWP.dll</HintPath>
     </Reference>
-    <Reference Include="Syncfusion.SfShared.UWP, Version=14.1460.0.41, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Syncfusion\Essential Studio\14.1.0.41\Assemblies for Universal Windows\10.0\Syncfusion.SfShared.UWP.dll</HintPath>
+    <Reference Include="Syncfusion.SfShared.UWP">
+      <HintPath>E:\Syncfusion\Syncfusion.SfShared.UWP.dll</HintPath>
     </Reference>
-    <Reference Include="Syncfusion.XlsIO.UWP, Version=14.1460.0.41, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Syncfusion\Essential Studio\14.1.0.41\Assemblies for Universal Windows\10.0\Syncfusion.XlsIO.UWP.dll</HintPath>
+    <Reference Include="Syncfusion.XlsIO.UWP">
+      <HintPath>E:\Syncfusion\Syncfusion.XlsIO.UWP.dll</HintPath>
     </Reference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
