New code  to test for solving chart crashes and slow updating

--- a/DemoPrototype/DemoPrototype.csproj
+++ b/DemoPrototype/DemoPrototype.csproj
@@ -117,6 +117,7 @@
     <Compile Include="CalibratePage.xaml.cs">
       <DependentUpon>CalibratePage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="DataHandler\AOUBackup.cs" />
     <Compile Include="DataHandler\AOUCalibrate.cs" />
     <Compile Include="DataHandler\AOUData.cs" />
     <Compile Include="DataHandler\AOUFileData.cs" />
