--- a/DemoPrototype/DemoPrototype.csproj
+++ b/DemoPrototype/DemoPrototype.csproj
@@ -176,6 +176,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\About.html" />
+    <Content Include="Assets\angus_icon.jpg" />
+    <Content Include="Assets\calf.png" />
     <Content Include="Assets\Financial.png" />
     <Content Include="Assets\Food.png" />
     <Content Include="Assets\Help.html" />
